# media_downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COOKIE_REFACTORING_COMPLETE.md  DATA_FLOW.md  DOWNLOADER_STATUS.md  FINAL_TESTING_GUIDE.md  LICENSE  README.md  TESTING_COMPLETE.md  TEST_NOW.md  USER_FEEDBACK_FIXES.md  config.json.example  config.py  config.yaml.example  instagram.py  installer.iss  main.py  media_downloader.spec  mypy.ini  operations.py  oprations.py  pinterest.py  pintrest.py  plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  test_all_downloaders.py  test_downloaders_functional.py  test_real_working_downloads.py  twitter.py  youtube.py
.claude/: AUTO_CLEANUP_COMPLETED_DOWNLOADS.md  CALLBACK_REFACTORING.md  CALLBACK_TROUBLESHOOTING.md  DIALOG_THREADING_FIXES.md  FILE_SERVICE_FIX.md  MULTI_PLATFORM_HANDLERS_IMPLEMENTATION.md  SUBTITLE_LOADING_FIX.md
.github/workflows/: ci-cd.yml  release.yml  workflow.yml
AppDir/: .DirIcon  AppRun  MediaDownloader.desktop  main.py
Downloads/: instagram_test_caption.txt
agents/: AGENTS.md  CHECKLIST.md
docs/: dev.md  radiojavan_challenge_notes.md  themes.md  windows-build.md
docs/specs/: README.md  TEMPLATE.md
hooks/: hook-customtkinter.py  runtime_hook_tcl.py
scripts/: build_windows.bat  download_chromium.py  download_ffmpeg.py  quality_gate.sh  refresh_radiojavan_session.py  setup_playwright.py
src/: __init__.py  main.py
src/abstractions/: __init__.py  handlers.py
src/application/: __init__.py  di_container.py  orchestrator.py  service_factories.py  service_factory.py
src/controllers/: __init__.py  auth_manager.py  download_manager.py
src/coordinators/: __init__.py  component_state_manager.py  download_coordinator.py  error_handler.py  error_notifier.py  main_coordinator.py  platform_dialog_coordinator.py  ui_state_manager.py
src/core/: __init__.py  application.py  base.py  config.py  container.py  event_coordinator.py  interfaces.py  link_detection.py  message_queue.py  models.py  service_controller.py  service_interfaces.py  type_defs.py
src/core/application/: __init__.py  container.py  di_container.py  orchestrator.py  service_factories.py
src/core/base/: __init__.py  base_handler.py  user_notifier.py
src/core/detection/: __init__.py
src/core/enums/: __init__.py  appearance_mode.py  browser_type.py  color_theme.py  compat.py  concurrent_option.py  download_error_type.py  download_status.py  error_type.py  events.py  instagram_auth_status.py  lifetime_scope.py  message_level.py  network_status.py  platform_type.py  service_type.py  theme_event.py
src/core/events/: __init__.py  coordinator.py
src/core/interfaces/: __init__.py  cookie_interfaces.py  event_bus.py  event_handlers.py  notifier.py  parser.py  protocols.py  service_interfaces.py  youtube_metadata.py
src/core/network/: __init__.py  network.py
src/core/services/: __init__.py  accessor.py  controller.py
src/core/themes/: __init__.py
src/downloaders/: __init__.py  base.py  instagram.py  pinterest.py  twitter.py  youtube.py
src/handlers/: __init__.py  application_controller.py  auth_handler.py  cookie_handler.py  download_handler.py  instagram_handler.py  network_checker.py  pinterest_handler.py  radiojavan_handler.py  service_detector.py  soundcloud_handler.py  spotify_handler.py  tiktok_handler.py  twitter_handler.py  youtube_handler.py
src/interfaces/: __init__.py  cookie_detection.py  event_handlers.py  handlers.py  parser.py  protocols.py  service_interfaces.py  ui_components.py  youtube_metadata.py
src/interfaces/core/: __init__.py
src/models/: __init__.py  auth.py  core.py  download_item.py  options.py  ui_state.py
src/models/enums/: __init__.py  core.py  message.py  status.py  theme.py
src/models/pydantic_models/: __init__.py  download_item.py  options.py  ui_state.py
src/schemas/: schemas.py
src/services/: __init__.py  download.py  factory.py  repository.py  thumbnail_cache.py  ytdlp_logger.py
src/services/cookies/: __init__.py  cookie_generator.py  cookie_manager.py  playwright_bootstrap.py  radiojavan_cookie_generator.py  radiojavan_cookie_manager.py  radiojavan_session_manager.py  site_cookie_manager.py  soundcloud_cookie_manager.py  spotify_cookie_manager.py  youtube_cookie_sources.py
src/services/detection/: __init__.py  base_handler.py  link_detector.py  models.py
src/services/events/: __init__.py  coordinator.py  event_bus.py  queue.py
src/services/factory/: __init__.py  service_factory.py
src/services/file/: __init__.py  downloader.py  models.py  sanitizer.py  service.py
src/ui/: __init__.py
src/utils/: __init__.py  common.py  error_helpers.py  ffmpeg.py  launch_validator.py  logger.py  message_queue.py  type_helpers.py  user_agent_rotator.py  window.py  window_utils.py
test_downloads/: download_test_report.json
tests/: __init__.py  conftest.py  conftest_backup.py  conftest_minimal.py  test_actual_downloads.py  test_base.py  test_base_comprehensive.py  test_basic.py  test_container.py  test_container_comprehensive.py  test_coordinators.py  test_dependency_injection.py  test_di_core.py  test_downloaders.py  test_downloaders_integrated.py  test_e2e_handler_flows.py  test_enums.py  test_final_verification.py  test_final_workflow.py  test_fixes.py  test_handlers.py  test_integration.py  test_issue_reproduction.py  test_metadata_simple.py  test_models.py  test_models_comprehensive.py  test_new_metadata_service.py  test_orchestration.py  test_radiojavan_downloader.py  test_radiojavan_session_manager.py  test_real_container.py  test_real_downloads.py  test_real_models.py  test_real_service_controller.py  test_real_spotify_downloads.py  test_service_controller.py  test_service_controller_comprehensive.py  test_spotify_download_integration.py  test_spotify_downloader.py  test_spotify_handler.py  (+12 more)
themes/: amber.json  blue.json  coral.json  cyan.json  emerald.json  gold.json  green.json  indigo.json  lime.json  navy.json  orange.json  pink.json  purple.json  red.json  rose.json  slate.json  teal.json  violet.json
(+65 files in other folders)
