[project]
name = "media-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "customtkinter>=5.2.2",
    "instaloader>=4.14.2",
    "mypy>=1.18.2",
    "playwright>=1.40.0",
    "pydantic>=2.11.8",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "tk>=0.1.0",
    "urllib3>=2.5.0",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
