[project]
name = "media-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "customtkinter>=5.2.2",
    "instaloader>=4.14.2",
    "mypy>=1.18.2",
    "playwright>=1.40.0",
    "pydantic>=2.11.8",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "tk>=0.1.0",
    "urllib3>=2.5.0",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pre-commit>=3.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "yt_dlp.*",
    "requests.*",
    "instaloader.*",
    "sqlite3.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.ui.*",
    "src.*.dialogs.*",
    "src.*.components.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2
