[project]
name = "media-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "customtkinter>=5.2.2",
    "instaloader>=4.14.2",
    "mypy>=1.18.2",
    "playwright>=1.40.0",
    "pydantic>=2.11.8",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "tk>=0.1.0",
    "urllib3>=2.5.0",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pre-commit>=3.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "ASYNC", # flake8-async
    "DTZ",  # flake8-datetimez
    "FA",   # future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "SLF",  # flake8-self
    "T",    # flake8-print
    "PERF", # perflint (performance)
    "PL",   # pylint
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "T201",  # print statements (allowed in scripts)
    "EXE001", # shebang without executable (scripts are fine)
    "PLR0913", # too many arguments (sometimes necessary)
    "PLR0915", # too many statements (some complex functions are necessary)
    "PLR2004", # magic value (config values are fine)
    "S101",  # use of assert (needed in tests)
    "S603",  # subprocess call (needed for yt-dlp)
    "S607",  # subprocess call with shell (needed for some operations)
    "S110",  # try-except-pass (sometimes intentional for cleanup)
    "PLC0415", # import at top-level (needed for lazy imports to avoid circular deps)
    "PERF102", # use .keys() instead of .items() (sometimes need both key and value)
    "PERF203", # try-except in loop (sometimes necessary for validation)
    "DTZ005", # datetime.now() without tz (acceptable for local timestamps)
    "SLF001", # private member access (sometimes needed for third-party libraries)
    "ARG002", # unused method argument (interface compliance, may be used by subclasses)
    "RUF001", # ambiguous characters (intentional in test cases)
    "S311", # random for non-crypto (acceptable for user agent rotation)
    "PLW1641", # __hash__ not implemented (test mocks don't need it)
    "PT017", # assertion in except (pytest.raises preferred but current pattern is acceptable)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "yt_dlp.*",
    "requests.*",
    "instaloader.*",
    "sqlite3.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.ui.*",
    "src.*.dialogs.*",
    "src.*.components.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2
